<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>Lorenzo Moreno Ruiz.</b></string>
    <string name="accept">Aceptar</string>

    <string name="guide_welcome">BIENVENIDO</string>
    <string name="guide_description">Explora el mundo mágico de Spyro... Te enseñaré a navegar por mundos fascinantes llenos de dragones y tesoros</string>
    <string name="guide_start_button">Comenzar</string>

    <string name="guidefinal_welcome">COMIENZA TU AVENTURA</string>
    <string name="guidefinal_description">Ya te he mostrado las opciones de juego, puedes conocer los personajes, los mundos y las colecciones del juego. Adentrate con nosotros en el maravilloso mundo de Spyro. PULSA SOBRE SPYRO PARA VER UN VÍDEO</string>
    <string name="guidefinal_start_button">Ahora a jugar</string>

    <string name="ani_prime">Aquí podrás explorar a todos los personajes del mundo de Spyro</string>
</resources>